// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCommand \`cmd1\` 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "cmd1",
    "tokenLength": 6,
  },
]
`;

exports[`parseCommand cmd  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
]
`;

exports[`parseCommand cmd "value"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand cmd "value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "value' ",
    "tokenLength": 8,
  },
]
`;

exports[`parseCommand cmd "value'\\"\\""  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value'\\"\\"",
    "tokenLength": 12,
  },
]
`;

exports[`parseCommand cmd 'item1\\item2\\'item3  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1\\item2\\item3",
    "tokenLength": 19,
  },
]
`;

exports[`parseCommand cmd 'item1\\item2\\'item3 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1\\item2\\item3",
    "tokenLength": 19,
  },
]
`;

exports[`parseCommand cmd 'value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand cmd --flag value 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand cmd --flag="value"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand cmd --flag='value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand cmd --flag=value 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand cmd -f  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand cmd -f 'value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand cmd -f 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand cmd -f 2`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand cmd -f value  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand cmd -f= 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand cmd -f="value"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand cmd -f='val 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "val",
    "tokenLength": 4,
  },
]
`;

exports[`parseCommand cmd -f=value  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand cmd 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
]
`;

exports[`parseCommand cmd dir\\ 1/dir\\ 2/item1 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "dir 1/dir 2/item1",
    "tokenLength": 19,
  },
]
`;

exports[`parseCommand cmd value  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand cmd1 "item1"item2 "item3" 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1item2",
    "tokenLength": 12,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "item3",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand cmd1 "item1"item2 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1item2",
    "tokenLength": 12,
  },
]
`;

exports[`parseCommand cmd1 "item1"item2 item3 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1item2",
    "tokenLength": 12,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "item3",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand cmd1 | cmd2  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd2",
    "tokenLength": 4,
  },
]
`;

exports[`parseCommand cmd1 - 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": false,
    "isOption": true,
    "token": "-",
    "tokenLength": 1,
  },
]
`;

exports[`parseCommand 😁 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "😁",
    "tokenLength": 2,
  },
]
`;
